# formation-sat-2

./: .env  .gitignore  AGENTS.md  GEMINI.md  Makefile  PROJECT_PROMPT1.md  PROJECT_PROMPT2.md  PROJECT_PROMPT3.md  PROJECT_PROMPT4.md  PROJECT_PROMPT5.md  PROJECT_PROMPT6.md  PROJECT_PROMPT7.md  PROJECT_PROMPT8.md  README.md  artefacts-documentation.md  cli.py  debug.txt  determining_orbital_elements_for_repeat_ground_track_orbits.md  gemini-conversation-1762794708095.json  gemini-conversation-1762798321875.json  gemini-conversation-1762866312615.json  gemini-conversation-1762935594544.json  proposal.md  pyproject.toml  requirements.txt  run.py  run_debug.py  مثال برای پرامپت  یه پروژه دیگه (غیر مرتبط).md
artefacts/: history.csv
config/: README.md  project.yaml
data/: tehran_boundary.geojson
docs/: AGENTS.md  Example prompt for another (unrelated) project.md  PROJECT_PROMPT.fa.md  PROJECT_PROMPT.md  RESEARCH_PROMPT.md  SYSTEM_INSTRUCTION.md  _authoritative_runs.md  active_station_keeping_debugging_report.md  active_station_keeping_plan.md  automated_plotting.md  compliance_matrix.md  concept_of_operations.md  core_mission_scenario.md  final_delivery_manifest.md  formation_analysis_report.md  formation_stability_and_control_plan.md  how-it-works.md  how_to_import_tehran_daily_pass_into_stk.md  how_to_validate_tehran_stk.md  interactive_execution_guide.md  literature_review.md  long_duration_ground_track_generation.md  lqr_controller_performance_report.md  mission_requirements.md  project_overview.md  project_roadmap.md  research_prompt.md  rgt_orbit_report.md  (+15 more)
(+556 files in other folders)
