[build-system]
requires = [
    "setuptools>=70",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "formation-sat-tools"
version = "0.1.0"
description = "Export utilities that serialise formation flying simulation artefacts into Systems Tool Kit 11.2 text products."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Formation Design Team" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
analysis = [
    "scipy>=1.11",
    "astropy>=5",
    "poliastro>=0.17; python_version < '3.11'",
    "numba>=0.58",
    "jplephem>=2.20",
]
visualisation = [
    "matplotlib>=3.7",
    "plotly>=5.15",
]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
]

[tool.setuptools.packages.find]
where = ["src", "tools"]
include = [
    "constellation",
    "constellation.*",
    "tools",
    "tools.*",
]
